# TSX--EDA-Forecasting

./: .dockerignore  .gitignore  Dockerfile  ECSService.json  ECS_Cluster_VPC_Resources.json  README.md  docker-compose.yml  etl.py  hello.py  pyproject.toml  requirements.txt
.github/workflows/: actions.yml
app/: app.py  app_draft.py  darts_lstm.py  darts_test.py  eda.ipynb  etl.py  etl_cron.py  sql3.py  sqlite-3.py  wf_test.py  zeduck.py
data/: cloud.json  duckdata.duckdb  esc.json
utils/: utils.py
